added icons to website and some improvements

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             data-aos-delay="200"
           >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-car"></i></div>
               <h4><a href="">Tell Us About Your Car</a></h4>
               <p>
                 Describe your car condition in detail and fill out the
@@ -170,7 +170,7 @@
             data-aos-delay="300"
           >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-timer"></i></div>
               <h4><a href="">Get an Offer Quickly</a></h4>
               <p>
                 We will review your submission and reach back with an offer.
@@ -184,7 +184,7 @@
             data-aos-delay="400"
           >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
+              <div class="icon"><i class="bx bx-money"></i></div>
               <h4><a href="">Junk Your Car In 1-2 Days</a></h4>
               <p>
                 Sell your car with ease – accept our offer, schedule the
@@ -530,9 +530,9 @@
             <div class="col-lg-3 col-md-6 footer-contact">
               <h3>Atlanta B&J</h3>
               <p>
-                A108 Adam Street <br />
+                <!-- A108 Adam Street <br />
                 New York, NY 535022<br />
-                United States <br /><br />
+                United States <br /><br /> -->
                 <strong>Phone:</strong> +1 5589 55488 55<br />
                 <strong>Email:</strong> info@example.com<br />
               </p>
@@ -545,11 +545,14 @@
                   <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#about">About us</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#">How It Works</a>
                 </li>
+                <li>
+                    <i class="bx bx-chevron-right"></i> <a href="#faq">FAQs</a>
+                  </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
                   <a href="#">Terms of service</a>
@@ -561,7 +564,7 @@
               </ul>
             </div>
 
-            <div class="col-lg-3 col-md-6 footer-links">
+            <!-- <div class="col-lg-3 col-md-6 footer-links">
               <h4>Our Services</h4>
               <ul>
                 <li>
@@ -583,13 +586,12 @@
                   <a href="#">Graphic Design</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
 
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Our Social Networks</h4>
               <p>
-                Cras fermentum odio eu feugiat lide par naso tierra videa magna
-                derita valies
+                Feel free to follow us on any of these social media platforms
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
