added back to top

--- a/index.html
+++ b/index.html
@@ -623,6 +623,13 @@
     </footer>
     <!-- End Footer -->
 
+    <!-- back to top -->
+    <a
+      href="#"
+      class="back-to-top d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
+
     <!-- Other JS Files -->
     <script src="assets/other/aos/aos.js"></script>
     <script src="assets/other/bootstrap/js/bootstrap.bundle.min.js"></script>
