added phone number and email, updated forms and other minor changes

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="#about"
-                >Call Now | +1 000-111-2222</a
+              <a class="getstarted scrollto" href="Tel: 770-875-2771"
+                >Call Now | 770-875-2771</a
               >
             </li>
           </ul>
@@ -83,7 +83,7 @@
               for towing or transport.
             </h2>
             <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#about" class="btn-get-started scrollto"
+              <a href="#contact" class="btn-get-started scrollto"
                 >Sell Your Car Today</a
               >
               <!-- <a
@@ -155,7 +155,7 @@
           >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-car"></i></div>
-              <h4><a href="">Tell Us About Your Car</a></h4>
+              <h4>Tell Us About Your Car</h4>
               <p>
                 Describe your car condition in detail and fill out the
                 information in the form, or give us a call and we will do it on
@@ -171,7 +171,7 @@
           >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-timer"></i></div>
-              <h4><a href="">Get an Offer Quickly</a></h4>
+              <h4>Get an Offer Quickly</h4>
               <p>
                 We will review your submission and reach back with an offer.
               </p>
@@ -185,7 +185,7 @@
           >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-money"></i></div>
-              <h4><a href="">Junk Your Car In 1-2 Days</a></h4>
+              <h4>Junk Your Car In 1-2 Days</h4>
               <p>
                 Sell your car with ease – accept our offer, schedule the
                 removal, and get paid on the spot!
@@ -430,26 +430,25 @@
         <div class="row">
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
-              <div class="address">
+              <!-- <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
                 <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
+              </div> -->
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>786junkcars@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 770 875 2771</p>
               </div>
-
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211792.18100155608!2d-84.03809849999999!3d33.96034055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f59d45cf8d985d%3A0x5aae88810e065f7d!2sGwinnett%20County%2C%20GA!5e0!3m2!1sen!2sus!4v1672274118017!5m2!1sen!2sus"
                 frameborder="0"
                 style="border: 0; width: 100%; height: 290px"
                 allowfullscreen
@@ -465,6 +464,8 @@
               class="php-email-form"
             >
               <div class="row">
+                <h3>Contact Information</h3>
+                <br>
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
                   <input
@@ -476,6 +477,16 @@
                   />
                 </div>
                 <div class="form-group col-md-6">
+                  <label for="name">Phone Number</label>
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    id="name"
+                    required
+                  />
+                </div>
+                <!-- <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
                   <input
                     type="email"
@@ -484,10 +495,32 @@
                     id="email"
                     required
                   />
-                </div>
+                </div> -->
+                <h3>Vehicle Information</h3>
+                <br>
               </div>
               <div class="form-group">
-                <label for="name">Subject</label>
+                <label for="name">Year</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="subject"
+                  id="subject"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="name">Make</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="subject"
+                  id="subject"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="name">Model</label>
                 <input
                   type="text"
                   class="form-control"
@@ -533,8 +566,8 @@
                 <!-- A108 Adam Street <br />
                 New York, NY 535022<br />
                 United States <br /><br /> -->
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                <strong>Phone:</strong> 770-875-2771<br />
+                <strong>Email:</strong> 786junkcars@gmail.com<br />
               </p>
             </div>
 
