added netlify form

--- a/index.html
+++ b/index.html
@@ -459,9 +459,11 @@
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form
               action="forms/contact.php"
-              method="post"
               role="form"
               class="php-email-form"
+              name="car-submission"
+              method="POST"
+              data-netlify="true"
             >
               <div class="row">
                 <h3>Contact Information</h3>
