--- a/index-esp.html
+++ b/index-esp.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atlanta B&J Towing | Compramos Autos Chatarra</title>
-    <!-- TODO: Fill out description -->
-    <meta content="description goes here" name="description" />
-    <!-- TODO: Fill out keywords -->
-    <meta content="keywords here" name="keywords" />
-
+    <meta
+      content="Obtenga servicios de remolque de autos chatarra rápidos y sin complicaciones con nuestro equipo dedicado. Retire convenientemente los vehículos no deseados de su propiedad y experimente un servicio al cliente excepcional. ¡Llámenos hoy!"
+      name="description"
+    />
+    <meta
+      content="Remolque de autos chatarra, remolque rápido, experiencia sin complicaciones, equipo conveniente y dedicado, retiro de vehículos no deseados, servicio al cliente excepcional, retiro de automóviles, retiro de autos chatarra, servicio de remolque"
+      name="keywords"
+    />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -103,9 +107,9 @@
             data-aos-delay="200"
           >
             <img
-              src="assets/images/hero-img.png"
+              src="assets/images/towing-trucks-removing-cars.png"
               class="img-fluid animated"
-              alt=""
+              alt="Servicio conveniente de remolque para autos chatarra"
             />
           </div>
         </div>
@@ -217,9 +221,9 @@
             data-aos-delay="200"
           >
             <img
-              src="assets/images/car-picked-up.png"
+              src="assets/images/junk-car-removal.png"
               class="img-fluid animated"
-              alt=""
+              alt="equipo remolca auto chatarra retiro de vehiculo no deseado"
             />
           </div>
           <div class="col-lg-6">
