--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atlanta B&J Towing | We Buy Junk Cars</title>
-    <!-- TODO: Fill out description -->
-    <meta content="description goes here" name="description" />
-    <!-- TODO: Fill out keywords -->
-    <meta content="keywords here" name="keywords" />
+    <meta
+      content="Get fast and hassle-free junk car towing services with our dedicated team. Conveniently remove unwanted vehicles from your property and experience exceptional customer service. Call us today!"
+      name="description"
+    />
+    <meta
+      content="Junk car towing, fast towing, hassle-free experience, convenient, dedicated team, remove unwanted vehicles, exceptional customer service, car removal, scap car removal, towing service"
+      name="keywords"
+    />
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
     <!-- Google Font -->
     <link
@@ -42,7 +46,7 @@
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
         <h1 class="logo me-auto"><a href="index.html">Atlanta B&J</a></h1>
-        <!-- ?? Uncomment below for image logo -->
+        <!-- !! Uncomment below for image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
         <nav id="navbar" class="navbar">
@@ -99,9 +103,9 @@
             data-aos-delay="200"
           >
             <img
-              src="assets/images/hero-img.png"
+              src="assets/images/towing-trucks-removing-cars.png"
               class="img-fluid animated"
-              alt=""
+              alt="Scrap car being picked up by our towing trucks"
             />
           </div>
         </div>
@@ -211,9 +215,9 @@
             data-aos-delay="200"
           >
             <img
-              src="assets/images/car-picked-up.png"
+              src="assets/images/junk-car-removal.png"
               class="img-fluid animated"
-              alt=""
+              alt="Scrap car being picked up by our towing trucks"
             />
           </div>
           <div class="col-lg-6">
