--- a/index.html
+++ b/index.html
@@ -476,34 +476,24 @@
                   <label for="name">Your Name</label>
                   <input
                     type="text"
-                    name="name"
+                    name="Name"
                     class="form-control"
                     id="name"
                     required
                   />
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Phone Number</label>
+                  <label for="phone">Phone Number</label>
                   <input
                     type="text"
-                    name="name"
+                    name="Phone-Number"
                     class="form-control"
-                    id="name"
+                    id="phone-number"
                     required
                   />
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">City</label>
-                  <input
-                    type="text"
-                    name="name"
-                    class="form-control"
-                    id="name"
-                    required
-                  />
-                </div>
-                <!-- <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
+                  <label for="email">Your Email</label>
                   <input
                     type="email"
                     class="form-control"
@@ -511,46 +501,57 @@
                     id="email"
                     required
                   />
-                </div> -->
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="city">City</label>
+                  <input
+                    type="text"
+                    name="City"
+                    class="form-control"
+                    id="city"
+                    required
+                  />
+                </div>
                 <h3>Vehicle Information</h3>
                 <br>
               </div>
               <div class="form-group">
-                <label for="name">Year</label>
+                <label for="year">Year</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="subject"
-                  id="subject"
+                  name="Year"
+                  id="year"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="name">Make</label>
+                <label for="make">Make</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="subject"
-                  id="subject"
+                  name="Make"
+                  id="make"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="name">Model</label>
+                <label for="model">Model</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="subject"
-                  id="subject"
+                  name="Model"
+                  id="model"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="name">Message</label>
+                <label for="message">Message</label>
                 <textarea
                   class="form-control"
-                  name="message"
+                  name="Message"
                   rows="10"
+                  id="message"
                   required
                 ></textarea>
               </div>
