--- a/index.html
+++ b/index.html
@@ -468,7 +468,9 @@
               name="car-submission"
               method="POST"
               data-netlify="true"
+              data-netlify-honeypot="bot-field"
             >
+              <input style="display: none;" name="bot-field">
               <div class="row">
                 <h3>Contact Information</h3>
                 <br>
