testing espanish site change

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
               <a class="getstarted scrollto" href="Tel: 770-875-2771"
                 >Call Now | 770-875-2771</a
               >
+              <a class="getstarted" href="/es/"
+                >Español</a
+              >
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
