added language change

--- a/es.html
+++ b/es.html
@@ -67,6 +67,9 @@
                 >Llámenos | 770-875-2771</a
               >
             </li>
+            <li>
+              <li><a class="nav-link" href="/"><i class="fa fa-language fa-2xl"></i><strong>English</strong></a></li>
+            </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
