--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="Junk car towing, fast towing, hassle-free experience, convenient, dedicated team, remove unwanted vehicles, exceptional customer service, car removal, scap car removal, towing service"
       name="keywords"
     />
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -36,6 +36,8 @@
       rel="stylesheet"
     />
     <link href="assets/other/remixicon/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
     <link href="assets/other/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- CSS -->
@@ -62,9 +64,9 @@
               <a class="getstarted scrollto" href="Tel: 770-875-2771"
                 >Call Now | 770-875-2771</a
               >
-              <a class="getstarted" href="/es/"
-                >Español</a
-              >
+            </li>
+            <li>
+              <li><a class="nav-link" href="/es/"><i class="fa fa-language fa-2xl"></i><strong>Español</strong></a></li>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -427,10 +429,10 @@
             are always happy to answer any questions you may have or provide you
             with a free quote. You can reach us by phone or email, or you can
             fill out the form below and we'll get back to you as soon as
-            possible. 
-            <br><br>
-            We look forward to working with you and helping you get
-            cash for your old or damaged car.
+            possible.
+            <br /><br />
+            We look forward to working with you and helping you get cash for
+            your old or damaged car.
           </p>
         </div>
 
@@ -455,7 +457,7 @@
                 <p>+1 770 875 2771</p>
               </div>
               <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211792.18100155608!2d-84.03809849999999!3d33.96034055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f59d45cf8d985d%3A0x5aae88810e065f7d!2sGwinnett%20County%2C%20GA!5e0!3m2!1sen!2sus!4v1672274118017!5m2!1sen!2sus"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211792.18100155608!2d-84.03809849999999!3d33.96034055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f59d45cf8d985d%3A0x5aae88810e065f7d!2sGwinnett%20County%2C%20GA!5e0!3m2!1sen!2sus!4v1672274118017!5m2!1sen!2sus"
                 frameborder="0"
                 style="border: 0; width: 100%; height: 290px"
                 allowfullscreen
@@ -473,10 +475,10 @@
               data-netlify="true"
               data-netlify-honeypot="bot-field"
             >
-              <input style="display: none;" name="bot-field">
+              <input style="display: none" name="bot-field" />
               <div class="row">
                 <h3>Contact Information</h3>
-                <br>
+                <br />
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
                   <input
@@ -518,7 +520,7 @@
                   />
                 </div>
                 <h3>Vehicle Information</h3>
-                <br>
+                <br />
               </div>
               <div class="form-group">
                 <label for="year">Year</label>
@@ -600,14 +602,16 @@
                   <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#about">About us</a>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#about">About us</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">How It Works</a>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">How It Works</a>
                 </li>
                 <li>
-                    <i class="bx bx-chevron-right"></i> <a href="#faq">FAQs</a>
-                  </li>
+                  <i class="bx bx-chevron-right"></i> <a href="#faq">FAQs</a>
+                </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
                   <a href="#">Terms of service</a>
