fixing font-awesome

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               >
             </li>
             <li>
-              <li><a class="nav-link" href="/es/"><i class="fa fa-language fa-2xl"></i><strong>Español</strong></a></li>
+              <li><a class="nav-link" href="/es/"><i class="fa fa-language"></i><strong>Español</strong></a></li>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
