--- a/es.html
+++ b/es.html
@@ -69,7 +69,7 @@
               >
             </li>
             <li>
-              <li><a class="nav-link" href="/"><i class="fa fa-language fa-2xl"></i><strong>English</strong></a></li>
+              <li><a class="nav-link" href="/"><i class="fa fa-language"></i><strong>English</strong></a></li>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
