making font-awesome link secure for it to load

--- a/es.html
+++ b/es.html
@@ -36,7 +36,7 @@
       rel="stylesheet"
     />
     <link href="assets/other/remixicon/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="assets/other/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- CSS -->
