--- a/es.html
+++ b/es.html
@@ -517,27 +517,17 @@
                   />
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Número De Teléfono</label>
+                  <label for="phone-number">Número De Teléfono</label>
                   <input
                     type="text"
-                    name="name"
+                    name="Phone-Number"
                     class="form-control"
-                    id="name"
+                    id="phone"
                     required
                   />
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Ciudad</label>
-                  <input
-                    type="text"
-                    name="name"
-                    class="form-control"
-                    id="name"
-                    required
-                  />
-                </div>
-                <!-- <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
+                  <label for="email">Correo Electrónico</label>
                   <input
                     type="email"
                     class="form-control"
@@ -545,42 +535,52 @@
                     id="email"
                     required
                   />
-                </div> -->
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="address">Dirección</label>
+                  <input
+                    type="text"
+                    name="address"
+                    class="form-control"
+                    id="address"
+                    required
+                  />
+                </div>
                 <h3>Información del Vehículo</h3>
                 <br />
               </div>
               <div class="form-group">
-                <label for="name">Año</label>
+                <label for="year">Año</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="subject"
-                  id="subject"
+                  name="year"
+                  id="year"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="name">Fabricante</label>
+                <label for="make">Fabricante</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="subject"
-                  id="subject"
+                  name="make"
+                  id="make"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="name">Modelo</label>
+                <label for="model">Modelo</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="subject"
-                  id="subject"
+                  name="model"
+                  id="model"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="name">Mensaje</label>
+                <label for="message">Mensaje</label>
                 <textarea
                   class="form-control"
                   name="message"
