--- a/index.html
+++ b/index.html
@@ -529,12 +529,12 @@
                   />
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="city">City</label>
+                  <label for="address">Address</label>
                   <input
                     type="text"
-                    name="City"
+                    name="Address"
                     class="form-control"
-                    id="city"
+                    id="address"
                     required
                   />
                 </div>
