updating email to the new one

--- a/es.html
+++ b/es.html
@@ -479,7 +479,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Correo Electrónico:</h4>
-                <p>786junkcars@gmail.com</p>
+                <p>atlantabjjunkcar@gmail.com</p>
               </div>
 
               <div class="phone">
