--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>786junkcars@gmail.com</p>
+                <p>atlantabjjunkcar@gmail.com</p>
               </div>
 
               <div class="phone">
