--- a/es.html
+++ b/es.html
@@ -678,7 +678,7 @@
               </ul>
             </div> -->
 
-            <div class="col-lg-3 col-md-6 footer-links">
+            <!-- <div class="col-lg-3 col-md-6 footer-links">
               <h4>Nuestras Redes Sociales</h4>
               <p>
                 No dude en seguirnos en cualquiera de estas plataformas de redes
@@ -693,7 +693,7 @@
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
