--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
               </ul>
             </div> -->
 
-            <div class="col-lg-3 col-md-6 footer-links">
+            <!-- <div class="col-lg-3 col-md-6 footer-links">
               <h4>Our Social Networks</h4>
               <p>
                 Feel free to follow us on any of these social media platforms
@@ -680,7 +680,7 @@
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
